@@ -1,0 +1,1 @@
+<p>Map lore: #MAPLORE#</p>
